--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,10 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.5.2</version>
+    </parent>
+
 </project>
